Projet GL/test/src/test/deca/context/invalid/increment1/variable-void.deca
//test rule (3.17)

// Raison : Condition 3.17

// Résultats : Ligne 13 "a variable can't be a void"

// Historique :
//  cree le 05/01/2023

{
    int x;
    //Must be refused
    void y;

    x = 3;
}